# dual_arm_sync

./: README.md  package.xml  setup.cfg  setup.py
config/: pipeline_params.yaml  sample_workspace_config.yaml
dual_arm_sync/: __init__.py  _robot.py  _robot2x.py  _robot4x.py  _robot5x.py  _robot6x.py  bench_core.py  collision_checker.py  constants.py  dual_arm_ik_solver.py  enhanced_testing_orchestrator.py  gazebo_executor.py  hierarchical_collision_resolver.py  ik_interactive.py  ik_solver.py  kuramoto_sync.py  kuramoto_synchronization.py  local_deformation.py  mesh_collision.py  mesh_collision_checker.py  multi_arm_core.py  multi_arm_trajectory_planner.py  quad_arm_config.py  quad_arm_ik_solver.py  quad_arm_results.py  quad_arm_test_pub.py  quad_collision_checker.py  quad_gazebo_executor.py  quad_kuramoto_synchronization.py  quad_rrt_planner.py  quad_trajectory_generation.py  raw_dual_move.py  results_step1.py  robot_geometry.py  robot_geometry_4arm.py  rrt_connect_planner.py  run_pipeline.py  step_1.py  step_10.py  step_100.py  (+68 more)
launch/: dual_gazebo.launch.py  dual_moveit.launch.py  dual_rviz.launch.py  multi_arm_gazebo.launch.py  multiple_arms_gazebo.launch.py
resource/: dual_arm_sync
rviz/: dual_arm.rviz
test/: test_hierarchical_bspline.py
worlds/: dual_arm_world.world
