<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_sync</name>
  <version>1.0.0</version>
  <description>
    Synchronized dual-arm trajectory generation for Doosan M1013 robots.
    Implements hierarchical collision detection, RRT-Connect with warm-start,
    and B-spline trajectory optimization.
    Based on: "Generation of Synchronized Configuration Space Trajectories 
    of Multi-Robot Systems" by Ariyan Kabir
  </description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/yourusername/dual_arm_sync</url>
  <url type="repository">https://github.com/yourusername/dual_arm_sync</url>
  <url type="bugtracker">https://github.com/yourusername/dual_arm_sync/issues</url>
  
  <author email="your.email@example.com">Your Name</author>
  
  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- Robot control -->
  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  
  <!-- TF and transforms -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Launch -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Simulation -->
  <depend>gazebo_ros</depend>
  <depend>ros_gz_sim</depend>
  
  <!-- Doosan robot packages -->
  <depend>dsr_gazebo2</depend>
  <depend>dsr_description2</depend>
  
  <!-- Python dependencies (installed via pip/conda) -->
  <!-- numpy, scipy -->
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>